# python-exec

./: LICENSE  README.md  pyproject.toml
linter/: __init__.py  __main__.py  application.py  cli.py
mega-linter-plugin-exec/: exec.megalinter-descriptor.yml
tests/: test_run.py  testscript.py
